--- a/datalake/catchemall-dataset/build.gradle
+++ b/datalake/catchemall-dataset/build.gradle
@@ -1,5 +1,5 @@
 group 'com.catchemallprocessor'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 apply plugin: 'java'
 
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     compile 'net.lingala.zip4j:zip4j:1.3.2'
+    compile 'org.json:json:20160810'
     compile 'org.mongodb:mongo-java-driver:3.4.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
